@@ -1,3 +1,4 @@
+	* improve DHT routing table to return better nodes (lower RTT and closer to target)
 	* don't use pointers to resume_data and file_priorities in add_torrent_params
 	* allow moving files to absolute paths, out of the download directory
 	* make move_storage more generic to allow both overwriting files as well as taking existing ones
